--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
